Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-459

automatic reset of qt version in project settings is wrong

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • None
    • Qt Creator 1.3.0
    • None
    • e3188417c3c2cb7bf0daf18182097f7108820151

      project mode => build settings => general => qt version will be reset to the default qt version when the previously selected version disappears (even temporarily). this happens without notice, which can lead to some nasty surprises.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            buddenha Oswald Buddenhagen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes