Don't silently reset the qt version if it has become invalid

Instead note that it is invalid if trying to build and on the projects
mode pane.

Task-Nr: QTCREATORBUG-459